--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "video.js": "^7.8.2",
     "vue": "^2.6.11",
     "vue-carousel-3d": "^0.2.0",
+    "vue-core-video-player": "^0.1.9",
     "vue-router": "^3.3.2",
     "vue-video-player": "^5.0.2",
     "vuex": "^3.4.0"
